# Resume-Matcher-NLP

./: .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.frontend  Dockerfile.hf  Dockerfile.render  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  start-render.sh  start.sh
.github/workflows/: ci.yml
ResumeMatcher.egg-info/: PKG-INFO  SOURCES.txt
examples/: sample_job_description.txt  sample_resume.txt
examples/resumes/: alice.txt  bob.txt  charlie.txt
frontend/: app.py
frontend/components/: candidate_card.py  candidate_comparison.py  candidate_table.py  header.py  job_preview.py  job_upload.py  resume_preview.py  resume_upload.py  upload_section.py
frontend/config/: settings.py
frontend/services/: analyzer.py  api.py
frontend/utils/: demo.py
notebooks/: 01_data_understanding.ipynb
scripts/: create_sample_pdf.py  semantic_similarity_demo.py  test_preprocessing.py
src/api/: app.py  routes.py  schemas.py
src/batch/: batch_processor.py  csv_exporter.py  resume_loader.py
src/components/: contact_extractor.py  data_ingestion.py  data_preprocessing.py  data_validation.py  name_extractor.py  (+6 more)
tests/: test_csv_exporter.py  test_document_processor.py  test_document_reader.py  test_exception.py  test_experience_extractor.py  test_lemmatizer.py  test_logger.py  test_match_api.py  test_normalizer.py  test_report_generator.py  test_resume_loader.py  test_rule_based_scorer.py  test_similarity_engine.py  test_skill_service.py  test_stopwords.py  test_tfidf_similarity.py  test_upload_api.py
uploads/: sample_resume.txt
(+73 files in other folders)
